// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switcher style params color brand 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-1vn84au-QxSwitcher-root"
    data-testid="testStyleParams-color-brand"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-iqwm0s-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color danger 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_danger QxSwitcher_position_left css-kh8wo2-QxSwitcher-root"
    data-testid="testStyleParams-color-danger"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-do69oj-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color info 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_info QxSwitcher_position_left css-12vrftk-QxSwitcher-root"
    data-testid="testStyleParams-color-info"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-do69oj-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color secondary 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_secondary QxSwitcher_position_left css-h6m773-QxSwitcher-root"
    data-testid="testStyleParams-color-secondary"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-iqwm0s-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color success 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_success QxSwitcher_position_left css-1ekzyed-QxSwitcher-root"
    data-testid="testStyleParams-color-success"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-do69oj-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color warning 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_warning QxSwitcher_position_left css-17m083m-QxSwitcher-root"
    data-testid="testStyleParams-color-warning"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-do69oj-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params disabled false 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-1vn84au-QxSwitcher-root"
    data-testid="testStyleParams-disabled-false"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-iqwm0s-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params disabled true 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_disabled QxSwitcher_position_left css-17dqn1m-QxSwitcher-root"
    data-testid="testStyleParams-disabled-true"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      disabled=""
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1iima7a-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1u5g9a4-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params position left 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-1vn84au-QxSwitcher-root"
    data-testid="testStyleParams-position-left"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-iqwm0s-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params position right 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_right css-1vn84au-QxSwitcher-root"
    data-testid="testStyleParams-position-right"
  >
    <div
      class="QxSwitcher-content css-1r6yxqi-QxSwitcher-content"
    >
      Статус
    </div>
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-iqwm0s-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params size large 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_large QxSwitcher_color_brand QxSwitcher_position_left css-o2j576-QxSwitcher-root"
    data-testid="testStyleParams-size-large"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-iqwm0s-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-p24uv7-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params size medium 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-1vn84au-QxSwitcher-root"
    data-testid="testStyleParams-size-medium"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-iqwm0s-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-e6slwr-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params size small 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_small QxSwitcher_color_brand QxSwitcher_position_left css-1ky9bec-QxSwitcher-root"
    data-testid="testStyleParams-size-small"
  >
    <input
      class="QxSwitcher-input css-vbnokk-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-iqwm0s-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-3p3seb-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1ywo4bn-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;
